# arthistorical-semantic-data-extraction

./: .gitignore  AGENTS.md  LRZ_USAGE_GUIDE.md  README.md  assemble_articles.py  batch_format.sh  batch_pass1.sh  batch_pass2.sh  corpus_modernization.md  count_wiki.py  excel_to_csv.py  extract_images.py  format_chunks.py  match_captions.py  mistral_format.py  pipe_to_wikitable.py  pyproject.toml  result_table.py  submit.sh  user-config.py  xml_to_markdown.py
data/: Band01_chunk001.txt  Band01_chunk001_formatted.md
data/formatted/: Band01_chunk001_formatted.md  missing_articles.csv
data/meta/: Hauptseite.wiki  Liste_Bände.csv  Struktur.md  Zur_Benutzung.wiki  band3-1_verzeichnis.md  band3-2_verzeichnis.md  fotorechte.csv
data/raw/: Band01_chunk001.txt
examples/: files.csv
src/: dropbox_links.py  errors.md  extract_images.py  format_chunks.py  match_captions.py  move_additional_ocr.py  pdf_to_images.py  preprocess_images.py  run_pass1.py  run_pass2.py  run_pass2_openrouter.py  surya_config.py  surya_layout.py  surya_markdown.py  surya_mediawiki.py  surya_models.py  surya_ocr.py  surya_pipeline.py  xml_to_markdown.py
src/articles/: __init__.py  __main__.py  assemble.py  boundaries.py  check_bib_tail.py  check_headers.py  check_ort.py  check_pages.py  collector.py  fix_linebreaks.py  fix_split.py  fix_zitat.py  format_articles.py  format_register_tables.py  formatter.py  helpers.py  marker_inserter.py  normalize_structure.py  page_index.py  postprocess.py  splitter.py  (+1 more)
templates/: Artikel.template  BandString.template  BildQuelle.template  CbDD-Band.template
(+10586 files in other folders)
