[project]
name = "arthistorical-semantic-data-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pdf2image>=1.17.0",
    "requests>=2.32.5",
    "surya-ocr>=0.17.1",
    "transformers>=4.56.0,<5",
]

[tool.uv]
package = false

[tool.uv.sources]
# Python source lives in src/; run scripts from that directory:
#   cd src && python extract_images.py
#   cd src && python match_captions.py
#   cd src && python xml_to_markdown.py
#   cd src && python pdf_to_images.py
